--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore doloremque dolores dolorum, earum exercitationem
                 facilis incidunt molestiae, natus, nulla odio repellendus sed sit temporibus voluptas.</p>
         </div>
+<div class="card">
+            <h3>Lorem ipsum.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore doloremque dolores dolorum, earum exercitationem
+                facilis incidunt molestiae, natus, nulla odio repellendus sed sit temporibus voluptas.</p>
+        </div>
+<div class="card">
+            <h3>Lorem ipsum.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore doloremque dolores dolorum, earum exercitationem
+                facilis incidunt molestiae, natus, nulla odio repellendus sed sit temporibus voluptas.</p>
+        </div>
         <div class="card">
             <h3>Lorem ipsum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore doloremque dolores dolorum, earum exercitationem
